--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ wp-content/themes/prospective.zip
 
 wp-content/themes/prospectiveprod.zip
 
-wp-content/themes/prospective.zip
+wp-content/themes/prospectiveprod
+
